--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,4 +14,5 @@ jobs:
       with:
         java-version: 1.8
     - name: Run tests
-      run: mvn clean test
+      run: mvn "-Dtest=*APITest" test
+
