--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,8 +1,12 @@
 name: Java CI
 
 on:
-  repository_dispatch:
-    types: do-something
+  push:
+    # Sequence of patterns matched against refs/heads
+    branches:
+      - manualGithubActions
+    repository_dispatch:
+      types: do-something
 
 jobs:
   build:
