--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,6 +3,10 @@ name: Java CI
 on:
   repository_dispatch:
     types: do-something
+  push:
+    # Sequence of patterns matched against refs/heads
+    branches:
+      - master
 jobs:
   build:
 
