update the user id

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
           author_name: Functional Tests
           text: Functional Tests
           channel: '@shridhk'
-          only_mention_fail: channel
+          only_mention_fail: USXBM5WPQ
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
