--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Run tests
-        run: mvn "-Dtest=*APITest" test
-        run: echo ${{ secrets.GITHUB_RUN_ID }}
+        run: mvn "-Dtest=*APITest" test && echo ${{ secrets.GITHUB_RUN_ID }}
       - uses: 8398a7/action-slack@v2
         with:
           status: ${{ job.status }}
