--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,34 +8,55 @@ on:
     branches:
       - master
 jobs:
-  build:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v1
+#      - name: Set up JDK 1.8
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
+#      - name: Run tests
+#        run: mvn "-Dtest=*APITest" test
+#      - name: Print Run id
+#        run: echo $GITHUB_RUN_ID
+#      - uses: 8398a7/action-slack@v2
+#        with:
+#          status: ${{ job.status }}
+#          author_name: Functional Tests
+#          text: Functional Tests
+#          channel: '@shridhk'
+#          only_mention_fail: USXBM5WPQ
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
+#          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+#        if: always()
 
-    runs-on: ubuntu-latest
-
+  ui-test:
+    runs-on: macOS-latest
+    strategy:
+      matrix:
+        api-level: [23, 29]
+        target: [default] #[default, google_apis]
+        profile: [Pixel]
     steps:
+      - name: checkout
       - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - uses: actions/setup-node@v1
+      - uses: actions/setup-java@v1
         with:
-          java-version: 1.8
-      - name: Run tests
-        run: mvn "-Dtest=*APITest" test
-      - name: Print Run id
-        run: echo $GITHUB_RUN_ID
-      - uses: 8398a7/action-slack@v2
+          - fetch-depth: 1
+          - node-version: '10.16'
+          - java-version: 1.8
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v1
         with:
-          status: ${{ job.status }}
-          author_name: Functional Tests
-          text: Functional Tests
-          channel: '@shridhk'
-          only_mention_fail: USXBM5WPQ
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        if: always()
-
-
-
+          api-level: ${{ matrix.api-level }}
+          target: ${{ matrix.target }}
+          arch: x86_64
+          profile: Nexus 6
+      - run: npm install -g appium
+      - run: mvn clean
 
 #curl -H "Accept: application/vnd.github.everest-preview+json" \
 #  -H "Authorization: token <TOKEN>" \
