--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,9 +41,11 @@ jobs:
         profile: [Pixel]
     steps:
       - name: checkout
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-      - uses: actions/setup-java@v1
+        uses: actions/checkout@v1
+      - name: set up node
+        uses: actions/setup-node@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
           - fetch-depth: 1
           - node-version: '10.16'
