Run android tests on github action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,6 +7,7 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
+      - andoridGithubActions
 jobs:
 #  build:
 #    runs-on: ubuntu-latest
