--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,9 +48,9 @@ jobs:
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          - fetch-depth: 1
-          - node-version: '10.16'
-          - java-version: 1.8
+          fetch-depth: 1
+          node-version: '10.16'
+          java-version: 1.8
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v1
         with:
