--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,7 +54,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          script: mvn -Dtest=RegistrationPageTest test
+          script: ${{ secrets.Authorization }} mvn -Dtest=RegistrationPageTest test
 
 
 #curl -H "Accept: application/vnd.github.everest-preview+json" \
