--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,7 +9,7 @@ on:
       - master
       - andoridGithubActions
 jobs:
-  build:
+  API-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -32,7 +32,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
         if: always()
 
-  ui-test:
+  mobile-test:
     runs-on: macOS-latest
     steps:
       - name: checkout
