--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,11 +7,10 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
+      - andoridGithubActions
 jobs:
-  build:
-
+  API-test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 1.8
@@ -25,8 +24,7 @@ jobs:
       - uses: 8398a7/action-slack@v2
         with:
           status: ${{ job.status }}
-          author_name: Functional Tests
-          text: Functional Tests
+          text: Functional API Tests
           channel: '@shridhk'
           only_mention_fail: USXBM5WPQ
         env:
@@ -34,6 +32,39 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
         if: always()
 
+  mobile-test:
+    runs-on: macOS-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: set up node
+        uses: actions/setup-node@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          fetch-depth: 1
+          node-version: '10.16'
+          java-version: 1.8
+      - run: npm install -g appium
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: mvn clean -Dtest=RegistrationPageTest test
+        env:
+          Authorization: ${{ secrets.Authorization }}
+      - name: Notify on Slack
+        uses: 8398a7/action-slack@v2
+        with:
+          status: ${{ job.status }}
+          author_name: Functional Tests
+          text: Functional Mobile Tests
+          channel: '@shridhk'
+          only_mention_fail: USXBM5WPQ
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+        if: always()
 
 
 
