Add tests for login

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,6 @@
 userName=test@ncg
 password=secret
 consentManagerURL=https://consent-manager-dev.projecteka.in
+
+#Props for Mobile Tests
+user=test
