--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,9 +64,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+          ConsentManagerSecret: ${{ secrets.ConsentManagerSecret }} # required
         if: always()
-
-
 
 #curl -H "Accept: application/vnd.github.everest-preview+json" \
 #  -H "Authorization: token <TOKEN>" \
