--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,7 @@
 userName=test@ncg
 password=secret
 consentManagerURL=https://consent-manager-dev.projecteka.in
+centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 
 #Props for Mobile Tests
 user=test
