--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,8 @@ jobs:
           java-version: 1.8
       - name: Run tests
         run: mvn "-Dtest=*APITest" test
+        env:
+          ConsentManagerSecret: ${{ secrets.ConsentManagerSecret }} # required
       - name: Print Run id
         run: echo $GITHUB_RUN_ID
       - uses: 8398a7/action-slack@v2
@@ -29,7 +31,6 @@ jobs:
           only_mention_fail: USXBM5WPQ
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-          ConsentManagerSecret: ${{ secrets.ConsentManagerSecret }} # required
         if: always()
 
   mobile-test:
