--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
-      - andoridGithubActions
+      - consentManagerAuth
 jobs:
   API-test:
     runs-on: ubuntu-latest
@@ -19,6 +19,8 @@ jobs:
           java-version: 1.8
       - name: Run tests
         run: mvn "-Dtest=*APITest" test
+        env:
+          ConsentManagerSecret: ${{ secrets.ConsentManagerSecret }} # required
       - name: Print Run id
         run: echo $GITHUB_RUN_ID
       - uses: 8398a7/action-slack@v2
@@ -28,7 +30,6 @@ jobs:
           channel: '@shridhk'
           only_mention_fail: USXBM5WPQ
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
         if: always()
 
@@ -64,7 +65,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-          ConsentManagerSecret: ${{ secrets.ConsentManagerSecret }} # required
         if: always()
 
 #curl -H "Accept: application/vnd.github.everest-preview+json" \
