Update services URL

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,6 @@
 userName=test@ncg
 password=secret
-consentManagerURL=https://consent-manager-dev.projecteka.in
+consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
 centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 
 #Props for Mobile Tests
