update ci for current branch

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
-      - consentManagerAuth
+      - registrationTest
 jobs:
   API-test:
     runs-on: ubuntu-latest
