--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           status: ${{ job.status }}
           text: Functional API Tests
-          channel: '@shridhk','C010PLR2KL6'
-          only_mention_fail: USXBM5WPQ
+          mention: @shridhk,C010PLR2KL6
+          only_mention_fail: USXBM5WPQ,C010PLR2KL6
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
         if: always()
