Update the users to fix the test

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,7 +1,7 @@
-userName=test@ncg
-password=secret
+userName=testuser3@ncg
+password=Test@1234
 consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
 centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 
 #Props for Mobile Tests
-user=test
+user=testuser3
