Add the env variable

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,7 @@ jobs:
         run: mvn "-Dtest=*APITest" test
         env:
           ConsentManagerSecret: ${{ secrets.ConsentManagerSecret }} # required
+          HIPSecret: ${{ secrets.HIPSecret }} # required
       - name: Print Run id
         run: echo $GITHUB_RUN_ID
       - uses: 8398a7/action-slack@v2
