--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
-userName=testuser10@ncg
-password=Test@135
+userName=mshrma@ncg
+password=Test135@
 consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
 centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 
