--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,6 +2,12 @@ userName=apitestuser@ncg
 password=Test135@
 consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
 centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
+HIUBackendURL= https://ncg-dev.projecteka.in/hiu-api
 
 #Props for Mobile Tests
 user=testuser10
+
+
+#Props for HIU Test
+HIUuserName=lakshmi
+HIUpassword=password
