Fix registration flow (#7)
* Fix registration flow

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,9 +5,11 @@ centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 HIUBackendURL= https://ncg-dev.projecteka.in/hiu-api
 
 #Props for Mobile Tests
-user=testuser10
-
+mobileUser=apitestuser
+mobilePassword=Test135@
 
 #Props for HIU Test
 HIUuserName=lakshmi
 HIUpassword=password
+
+
