API - pipeline - fixes

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,8 +1,11 @@
-userName=apitestuser@ncg
-password=Test135@
+#URLs
 consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
 centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 HIUBackendURL= https://ncg-dev.projecteka.in/hiu-api
+
+#Props for API Tests
+userName=apitestuser01@ncg
+password=Test1@23
 
 #Props for Mobile Tests
 mobileUser=apitestuser
