--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
-      - registration
+      - hip-test
 jobs:
   API-test:
     runs-on: ubuntu-latest
@@ -18,7 +18,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Run tests
-        run: mvn "-Dtest=*APITest" test
+        run: mvn clean "-Dtest=*APITest" test
         env:
           ConsentManagerSecret: ${{ secrets.ConsentManagerSecret }} # required
           HIPSecret: ${{ secrets.HIPSecret }} # required
