--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -12,4 +12,16 @@ mobilePassword=Test135@
 HIUuserName=lakshmi
 HIUpassword=password
 
+#------------------------------------------------HIU-UI-TEST values------------------------------------------------------------
 
+#Home page
+NCGHomepage.name=lakshmi
+NCGHomepage.password=password
+
+#Request page
+ConsentRequestPage.enterPatientName=rajkumar
+
+#Assertion
+
+LoginTrue=NCG
+requestTrue=Consent requested successfully!
