--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,31 @@
             <version>3.141.59</version>
         </dependency>
         <!--Added Selenium dependency explicitly to avoid error see https://github.com/appium/java-client/issues/1297-->
-    </dependencies>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+
+                                       <!--HIU-UI-dependency-->
+
+      <dependency>
+          <groupId>org.seleniumhq.selenium</groupId>
+          <artifactId>selenium-java</artifactId>
+          <version>3.8.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>3.8.1</version>
+          <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-jdk14</artifactId>
+          <version>1.7.25</version>
+      </dependency>
+
+  </dependencies>
+  <properties>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 </project>
