Refactored HIU tests | Assertions added

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -24,4 +24,4 @@ ConsentRequestPage.enterPatientName=rajkumar
 #Assertion
 
 LoginTrue=NCG
-requestTrue=Consent requested successfully!
+success=Consent requested successfully!
