pipeline-tests-fixed

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,8 +4,8 @@ centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 HIUBackendURL= https://ncg-dev.projecteka.in/hiu-api
 
 #Props for API Tests
-userName=apitestuser01@ncg
-password=Test1@23
+userName=apidemotest01@ncg
+password=Test135@
 
 #Props for Mobile Tests
 mobileUser=apitestuser
