update tests for gateway endpoints

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,7 +4,7 @@ centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 HIUBackendURL= https://ncg-dev.projecteka.in/hiu-api
 
 #Props for API Tests
-userName=apidemotest02@ncg
+userName=apidemotest10@ncg
 password=Test135@
 
 #Props for Mobile Tests
@@ -14,5 +14,7 @@ mobilePassword=Test135@
 #Props for HIU Test
 HIUuserName=lakshmi
 HIUpassword=password
+HIUPatient=sprint4@ncg
+
 
 
