--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -8,7 +8,7 @@ userName=apidemotest10@ncg
 password=Test135@
 
 #Props for Mobile Tests
-mobileUser=apitestuser
+mobileUser=apidemotest20
 mobilePassword=Test135@
 
 #Props for HIU Test
