--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,15 +4,17 @@ centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 HIUBackendURL= https://ncg-dev.projecteka.in/hiu-api
 
 #Props for API Tests
-userName=apidemotest02@ncg
+userName=apidemotest10@ncg
 password=Test135@
 
 #Props for Mobile Tests
-mobileUser=apitestuser
+mobileUser=apidemotest20
 mobilePassword=Test135@
 
 #Props for HIU Test
 HIUuserName=lakshmi
 HIUpassword=password
+HIUPatient=sprint4@ncg
+
 
 
