grant-deny-revoke-consent | create PIN | logout

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -14,7 +14,7 @@ mobilePassword=Test135@
 #Props for HIU Test
 HIUuserName=lakshmi
 HIUpassword=password
-HIUPatient=sprint4@ncg
+HIUPatient=apidemotest10@ncg
 
 
 
