--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,6 +7,7 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
+      - cm-api-tests
 jobs:
   API-test:
     runs-on: ubuntu-latest
