--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,5 @@ target/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-ProjectEKATests.iml
+*.iml
 target/
