--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,6 +2,8 @@
 consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
 centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
 HIUBackendURL= https://ncg-dev.projecteka.in/hiu-api
+HIUBaseURL= https://ncg-dev.projecteka.in/hiu-api
+CMBaseURL= https://ncg-dev.projecteka.in/consent-manager
 
 #Props for API Tests
 userName=apidemotest10@ncg
@@ -14,7 +16,7 @@ mobilePassword=Test135@
 #Props for HIU Test
 HIUuserName=lakshmi
 HIUpassword=password
-HIUPatient=sprint4@ncg
+HIUPatient=apidemotest10@ncg
 
 
 
