--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,17 @@
             <artifactId>assertj-core</artifactId>
             <version>3.16.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+
 
         <!--Added Selenium dependency explicitly to avoid error see https://github.com/appium/java-client/issues/1297-->
     </dependencies>
