add tests for nhs app

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,5 @@
+repoURL=/repos/ProjectEKA/Jataayu/actions/workflows/android.yml/runs?branch=master&status=completed
+artifactURL=/repos/ProjectEKA/Jataayu/actions/runs/%s/artifacts
 #URLs
 consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
 centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
