add ncg flow test

--- a/src/test/resources/config-dev.properties
+++ b/src/test/resources/config-dev.properties
@@ -1,2 +1,7 @@
 repoURL=/repos/I-NHA/Jan-Aarogya-Setu-Android/actions/runs?branch=master&status=completed
 artifactURL=/repos/I-NHA/Jan-Aarogya-Setu-Android/actions/runs/%s/artifacts
+
+
+#Props for Mobile Tests
+mobileUser=navjotauto
+mobilePassword=Test@135
