--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,7 @@
 repoURL=/repos/ProjectEKA/Jataayu/actions/workflows/android.yml/runs?branch=master&status=completed
 artifactURL=/repos/ProjectEKA/Jataayu/actions/runs/%s/artifacts
+APP_ACTIVITY=in.projecteka.jataayu.LauncherActivity
+APP_PACKAGE=in.projecteka.jataayu.debug
 #URLs
 consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
 centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
