--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,22 @@
     <groupId>org.projecteka.tests</groupId>
     <artifactId>ProjectEKA-tets</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>RELEASE</version>
+            <version>6.9.8</version>
         </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
