--- a/src/test/resources/config-dev.properties
+++ b/src/test/resources/config-dev.properties
@@ -1,5 +1,5 @@
 repoURL=/repos/I-NHA/Jan-Aarogya-Setu-Android/actions/runs?branch=master&status=completed
-artifactURL=/repos/I-NHA/Jan-Aarogya-Setu-Android/actions/runs/%s/artifacts
+artifactURL=/repos/I-NHA/Jan-Aarogya-Setu-Android/
 APP_ACTIVITY=in.ndhm.phr.LauncherActivity
 APP_PACKAGE=in.ndhm.phr.debug
 
