--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,26 +1,31 @@
-repoURL=/repos/ProjectEKA/Jataayu/actions/workflows/android.yml/runs?branch=master&status=completed
-artifactURL=/repos/ProjectEKA/Jataayu/
-APP_ACTIVITY=in.projecteka.jataayu.LauncherActivity
-APP_PACKAGE=in.projecteka.jataayu.debug
-#URLs
-consentManagerURL=https://ncg-dev.projecteka.in/consent-manager
-centralRegistryURL= https://ncg-dev.projecteka.in/central-registry
-HIUBackendURL= https://ncg-dev.projecteka.in/hiu-api
-HIUBaseURL= https://ncg-dev.projecteka.in/hiu-api
-CMBaseURL= https://ncg-dev.projecteka.in/consent-manager
+#######################################################################################################################
+#                                               ENVIRONMENT  -   NCG                                                  #
+#######################################################################################################################
+#
+# <----------------------------------------------- MOBILE - PATHS ---------------------------------------------------->
+repoURL     = /repos/ProjectEKA/Jataayu/actions/workflows/android.yml/runs?branch=master&status=completed
+artifactURL = /repos/ProjectEKA/Jataayu/
+APP_ACTIVITY= in.projecteka.jataayu.LauncherActivity
+APP_PACKAGE = in.projecteka.jataayu.debug
 
-#Props for API Tests
-userName=apidemotest30@ncg
-password=Test135@
+# <--------------------------------------------- MOBILE - TEST DATA -------------------------------------------------->
+mobileUser      = apidemotest21
+mobilePassword  = Test135@
 
-#Props for Mobile Tests
-mobileUser=apidemotest21
-mobilePassword=Test135@
+# <-------------------------------------------------- API - URLs ----------------------------------------------------->
+consentManagerURL   = https://ncg-dev.projecteka.in/consent-manager
+centralRegistryURL  = https://ncg-dev.projecteka.in/central-registry
+HIUBaseURL          = https://ncg-dev.projecteka.in/hiu-api
 
-#Props for HIU Test
-HIUuserName=lakshmi
-HIUpassword=password
-HIUPatient=apidemotest30@ncg
+# <------------------------------------------------ API - TEST DATA -------------------------------------------------->
+# consent-manager test-data
+username    = apidemotest30@ncg
+password    = Test135@
+
+# HIU test-data
+HIUuserName = lakshmi
+HIUpassword = password
+HIUPatient  = apidemotest30@ncg
 
 
 
