--- a/src/test/resources/config-nhs-uat.properties
+++ b/src/test/resources/config-nhs-uat.properties
@@ -1,8 +1,13 @@
-repoURL=/repos/I-NHA/Jan-Aarogya-Setu-Android/actions/runs?branch=master&status=completed
-artifactURL=/repos/I-NHA/Jan-Aarogya-Setu-Android/
-APP_ACTIVITY=in.ndhm.phr.LauncherActivity
-APP_PACKAGE=in.ndhm.phr.debug
-
-#Props for Mobile Tests
-mobileUser=navjotauto
-mobilePassword=Test@135
+#######################################################################################################################
+#                                             ENVIRONMENT  -   NHA UAT                                                #
+#######################################################################################################################
+#
+# <----------------------------------------------- MOBILE - PATHS ---------------------------------------------------->
+repoURL     = /repos/I-NHA/Jan-Aarogya-Setu-Android/actions/runs?branch=master&status=completed
+artifactURL = /repos/I-NHA/Jan-Aarogya-Setu-Android/
+APP_ACTIVITY= in.ndhm.phr.LauncherActivity
+APP_PACKAGE = in.ndhm.phr.debug
+#
+# <--------------------------------------------- MOBILE - TEST DATA -------------------------------------------------->
+mobileUser      = navjotauto
+mobilePassword  = Test@135
