--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -23,8 +23,8 @@ username    = apidemotest30@ncg
 password    = Test135@
 
 # HIU test-data
-HIUuserName = lakshmi
-HIUpassword = password
+HIUUsername = lakshmi
+HIUPassword = password
 HIUPatient  = apidemotest30@ncg
 
 
