:wrench: :green_heart: use mock username and password for Login test

--- a/src/test/resources/config-nhs-dev.properties
+++ b/src/test/resources/config-nhs-dev.properties
@@ -9,5 +9,5 @@ APP_ACTIVITY= in.ndhm.phr.LauncherActivity
 APP_PACKAGE = in.ndhm.phr.debug
 
 # <--------------------------------------------- MOBILE - TEST DATA -------------------------------------------------->
-mobileUser      = navjotauto
-mobilePassword  = Test@135
+mobileUser      = mockhina
+mobilePassword  = Test@1324
