--- a/src/test/resources/config-nhs-dev.properties
+++ b/src/test/resources/config-nhs-dev.properties
@@ -2,6 +2,7 @@
 #                                             ENVIRONMENT  -   NHA DEV                                                #
 #######################################################################################################################
 #
+ENVIRONMENT = nhaDev
 # <----------------------------------------------- MOBILE - PATHS ---------------------------------------------------->
 repoURL     = /repos/I-NHA/Jan-Aarogya-Setu-Android/actions/runs?branch=master&status=completed
 artifactURL = /repos/I-NHA/Jan-Aarogya-Setu-Android/
@@ -11,3 +12,19 @@ APP_PACKAGE = in.ndhm.phr.debug
 # <--------------------------------------------- MOBILE - TEST DATA -------------------------------------------------->
 mobileUser      = navjotauto
 mobilePassword  = Test@135
+
+# <-------------------------------------------------- API - URLs ----------------------------------------------------->
+consentManagerURL   = https://dev.tweka.in/cm
+centralRegistryURL  = https://dev.tweka.in/central-registry
+HIUBaseURL          = https://dev.tweka.in/hiu-api
+
+# <------------------------------------------------ API - TEST DATA -------------------------------------------------->
+# consent-manager test-data
+username    = test.sb.005@ndhm
+password    = Test135@
+accessKey   = token
+
+# HIU test-data
+HIUUsername = admin
+HIUPassword = password
+HIUPatient  = test.sb.005@ndhm
