--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,6 +2,7 @@
 #                                               ENVIRONMENT  -   NCG                                                  #
 #######################################################################################################################
 #
+ENVIRONMENT = ncg
 # <----------------------------------------------- MOBILE - PATHS ---------------------------------------------------->
 repoURL     = /repos/ProjectEKA/Jataayu/actions/workflows/android.yml/runs?branch=master&status=completed
 artifactURL = /repos/ProjectEKA/Jataayu/
@@ -21,6 +22,7 @@ HIUBaseURL          = https://ncg-dev.projecteka.in/hiu-api
 # consent-manager test-data
 username    = apidemotest30@ncg
 password    = Test135@
+accessKey   = accessToken
 
 # HIU test-data
 HIUUsername = lakshmi
