added branch-name to workflow file

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
-      - lombok-payloadss
+      - nha-devv-changes
 jobs:
   API-test-ncg:
     runs-on: ubuntu-latest
