run workflow for branch pipeline-fixed

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:
       - master
-      - nha-devv-changes
+      - pipeline-fixed
 jobs:
   API-test-ncg:
     runs-on: ubuntu-latest
